{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 23,
  "lineage": "fcb6e87c-819d-bd48-56a9-74f103fc9d8e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/regions/us-central1/networkEndpointGroups/hr-agent-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-15T05:24:58.891-08:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "SIWV94kRvYk=",
            "generated_id": 8114557512998802501,
            "id": "projects/maakansha-sandbox/global/backendServices/hr-agent-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "hr-agent-backend",
            "port_name": "http",
            "project": "maakansha-sandbox",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/securityPolicies/hr-agent-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/backendServices/hr-agent-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.hr_agent",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.hr_agent_armor",
            "google_storage_bucket.artifacts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.54.38.239",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-15T05:24:48.134-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/maakansha-sandbox/global/addresses/hr-agent-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "hr-agent-lb-ip",
            "prefix_length": 0,
            "project": "maakansha-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/addresses/hr-agent-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 2841688707013367279,
            "id": "projects/maakansha-sandbox/global/forwardingRules/hr-agent-lb-forwarding-rule",
            "ip_address": "34.54.38.239",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "hr-agent-lb-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "maakansha-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/forwardingRules/hr-agent-lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/targetHttpProxies/hr-agent-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.hr_agent",
            "google_compute_backend_service.default",
            "google_compute_global_address.lb_ip",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.hr_agent_armor",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_storage_bucket.artifacts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "hr_agent_armor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "fingerprint": "dzHk7vYB7dc=",
            "id": "projects/maakansha-sandbox/global/securityPolicies/hr-agent-security-policy",
            "label_fingerprint": "vezUS-42LLM=",
            "labels": {},
            "name": "hr-agent-security-policy",
            "project": "maakansha-sandbox",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default allow",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "rate_based_ban",
                "description": "Rate limit to prevent people from spamming the agent",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 300,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 100,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/securityPolicies/hr-agent-security-policy",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-15T05:26:12.896-08:00",
            "fingerprint": "v0Y4Obetnnw=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/maakansha-sandbox/global/targetHttpProxies/hr-agent-http-proxy",
            "name": "hr-agent-http-proxy",
            "project": "maakansha-sandbox",
            "proxy_bind": false,
            "proxy_id": 2972397609941292059,
            "self_link": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/targetHttpProxies/hr-agent-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/urlMaps/hr-agent-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.hr_agent",
            "google_compute_backend_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.hr_agent_armor",
            "google_compute_url_map.default",
            "google_storage_bucket.artifacts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-15T05:26:01.799-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/backendServices/hr-agent-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "j5hDpvncH7c=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/maakansha-sandbox/global/urlMaps/hr-agent-url-map",
            "map_id": 1495208140365714438,
            "name": "hr-agent-url-map",
            "path_matcher": [],
            "project": "maakansha-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/maakansha-sandbox/global/urlMaps/hr-agent-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.hr_agent",
            "google_compute_backend_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.hr_agent_armor",
            "google_storage_bucket.artifacts"
          ]
        }
      ]
    }
  ]
}